Bug 1320005 - don't show the 'play tab' icon for the media element without audio track. r=baku

MozReview-Commit-ID: K42I0yWaI7N

--HG--
extra : rebase_source : 6b2cd50bb327a644f9092c1e018203854d3d899f